# ai-unicursal-maze

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_en.md  pyproject.toml  requirements.txt
backend/: app.py  cli.py
backend/api/: routes.py
backend/core/: backbone.py  decorator.py  euler_path.py  features.py  graph_builder.py  graph_utils.py  line_drawing.py  maze_generator.py  maze_grid.py  models.py  path_finder.py  semantics.py  skeleton.py  solver.py  staged_generator.py
backend/core/density/: __init__.py  dm1.py  dm2.py  dm4.py  dm5.py  dm6.py  dm6_optimizer.py  dm8.py  edge_enhancer.py  entrance_exit.py  exporter.py  grid_builder.py  i4_pipeline.py  i4_renderer.py  maze_builder.py  path_designer.py  preprocess.py  segment.py  solver.py  texture.py  tonal_exporter.py
docs/: MASTERPIECE_V6_RESUME.md  dm8_multiscale_design.md
frontend/: ui.py
outputs/: design_variable_cell_size.md  dm8_ssim_analysis.md  quality_report_phase3.md  ssim_benchmark_results.md  ssim_dm8_benchmark.md  ssim_gridsearch_dm8.md
scripts/: dm8_ssim_analysis.py  evaluate_quality.py  run_maze.py  ssim_dm8_benchmark.py  ssim_i4_benchmark.py
tests/: test_cli_masterpiece.py  test_density_gradient_walls.py  test_density_image_guided_luminance.py  test_density_maze_phase1.py  test_density_phase2_clahe.py  test_density_phase2_edge.py  test_density_phase2_variable_wall.py  test_density_phase2b_density_control.py  test_density_phase3_svg_quality.py  test_density_solver.py  test_density_variable_cell_size.py  test_dm1_foundation.py  test_dm1_impl.py  test_dm2.py  test_dm4.py  test_dm4_photo_preset_705k.py  test_dm5.py  test_dm6.py  test_dm7_passage_ratio_ssim.py  test_dm8.py  test_dm8_edgecases_704k.py  test_dm8_gridsearch_wall_color.py  test_dummy_decorator.py  test_e2e_density_maze.py  test_euler_path.py  test_face_regressions.py  test_features.py  test_grayscale_walls.py  test_i4_pipeline.py  test_i4_renderer.py  test_masterpiece_integration.py  test_maze_generator.py  test_maze_q3_dijkstra.py  test_maze_v11.py  test_path_first_masterpiece.py  test_performance.py  test_phase3_masterpiece.py  test_quality_evaluation.py  test_skeleton_stability.py  test_solver_paths.py  (+8 more)
tests/fixtures/: __init__.py
